# labs

./: CMakeLists.txt  lab2.cpp  lab2.hpp  main.cpp  myFilter.cpp  myFilter.hpp
