cmake_minimum_required(VERSION 2.8.11)
project(labs-project)
find_package(OpenCV REQUIRED)
if(UNIX)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
endif()
file(GLOB sources "*.cpp")
file(GLOB headers "*.hpp")
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(labs-project ${sources} ${headers})
target_link_libraries(labs-project ${OpenCV_LIBS})
